--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -76,38 +76,36 @@ COVID-19 policy: Please refer to the UWaterloo Coronavirus website for updated a
 
 This is a **tentative** class schedule and may be adjusted as the term progresses
 
-| Lecture                   | Date   | Topic                                                       | Slides |
-| ------------------------- | ------ | ----------------------------------------------------------- |--------|
-| L01                       | Jan 6  | Course Overview and Logistics                               ||
-| L02                       | Jan 8  | A primer in Computational Biology                           |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5875262/View)|
-| L03                       | Jan 13 | Sequence Alignment                                          |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882089/View) (Jan 20)| 
-| L04                       | Jan 15 | Sequence Database search                                    |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882090/View) (Jan 22)|
-| L05                       | Jan 20 | Probabilistic interpretarion of score/ Introduction to AF methods      ||
-| L06                       | Jan 22 | Multiple Sequence alignment/Phylogeny                                                   |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882091/View) (Jan 24)|
-| \*[Assignment 1](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5883633/View) due Jan 24 |
-| L07                       | Jan 27 | Phylogeny (Distance-based methods)                                                            |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5902648/View)|
-| L08                       | Jan 29 | Phylogeny (Character-based methods)                                                           ||
-| L09                       | Feb 3  | Genome assembly and mapping part 1 ||
-| L10                       | Feb 5  | Genome assembly and mapping part 2           ||
-| L11                       | Feb 10 | Foundations in Machine Learning: Neural Networks                                                          ||
-|                           | Feb 12 | Miterm Exam (No Lecture)                                    ||
-| Reading Week              | Feb 17 |                                                             ||
-|                           | Feb 19 |                                                           ||
-| L12                       | Feb 24 | Machine Learning & AF methods                                         ||
-| L13                       | Feb 26 | Foundations in Deep Learning: Transformer Models                                                           ||
-| \*Assignment 2 due Feb 28 |
-| L14                       | Mar 3  | DNA Language Models                            ||
-| L15                       | Mar 5  | Genome Annotation part 1                                                          ||
-| L16                       | Mar 10 | Genome annotation part 2                             || 
-| L17                       | Mar 12 | Proteomics and Mass Spectrometry                                                          ||
-| \*Assignment 3 due Mar 15 |
-| L18                       | Mar 17 | Protein Structure Prediction Alpha fold  ||
-| L19                       | Mar 19 | RNA analysis                                                                                   ||
-| L20                       | Mar 24 | Clustering                                        ||
-| L21                       | Mar 26 | RNA-Sequencing & Gene Expression                                                        ||
-| L22                       | Mar 31 | Single-cell genomics part 1             ||
-| L23                       | Apr 2  | Single-cell genomics part 2                                       ||
-| \*Assignment 4 due Apr 4  |
-
-
+| Lecture                                                                                                 | Date   | Topic                                                                 | Slides                                                                                     | Scribe                  |
+|---------------------------------------------------------------------------------------------------------|--------|-----------------------------------------------------------------------|--------------------------------------------------------------------------------------------|-------------------------|
+| L01                                                                                                     | Jan 6  | ~~Course Overview and Logistics~~                                     |                                                                                            |                         |
+| L02                                                                                                     | Jan 8  | ~~A primer in Computational Biology~~                                 | [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5875262/View)          | f282wang                |
+| L03                                                                                                     | Jan 13 | ~~Sequence Alignment~~                                                | [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882089/View) (Jan 20) | yrohatgi                |
+| L04                                                                                                     | Jan 15 | ~~Sequence Database search~~                                          | [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882090/View) (Jan 22) | dxzhang                 |
+| L05                                                                                                     | Jan 20 | ~~Probabilistic interpretarion of score/ Introduction to AF methods~~ |                                                                                            |                         |
+| L06                                                                                                     | Jan 22 | ~~Multiple Sequence alignment/Phylogeny~~                             | [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882091/View) (Jan 24) | ky3xu                   |
+| \*[Assignment 1](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5883633/View) due Jan 24 |        |                                                                       |                                                                                            |                         |
+| L07                                                                                                     | Jan 27 | ~~Phylogeny (Distance-based methods)~~                                | [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5902648/View)          | Yuqi                    |
+| L08                                                                                                     | Jan 29 | ~~Phylogeny (Character-based methods)~~                               |                                                                                            |                         |
+| L09                                                                                                     | feb 3  | ~~Genome assembly part 1~~                                            |  [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5907152/View)                                                                                           | k327lee                 |
+| L10                                                                                                     | feb 5  | ~~Genome assembly part 2~~                                            |                                                                                            |                         |
+| L11                                                                                                     | feb 10 | ~~Genome mapping part 1~~                                             |  [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5909546/View)                                                                                       |                         |
+|                                                                                                         | feb 12 | Miterm Exam (No Lecture)                                              |                                                                                            |                         |
+| Reading Week                                                                                            | feb 17 |                                                                       |                                                                                            |                         |
+|                                                                                                         | feb 19 |                                                                       |                                                                                            |                         |
+| L12                                                                                                     | feb 24 | Genome mapping part 2                                                 |                                                                                            |                         |
+| L13                                                                                                     | feb 26 | Foundations in Machine Learning: Neural Networks                      |                                                                                            | ogamaras                |
+| \*[Assignment 2](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5911796/View) due Feb 28                                                                               |        |                                                                       |                                                                                            |                         |
+| L14                                                                                                     | mar 3  | Machine Learning in genomics                                          |                                                                                            | a7nagpal (Arnav Nagpal) |
+| L15                                                                                                     | mar 5  | Foundations in Deep Learning: Transformer Models                      |                                                                                            | mswitt                  |
+| L16                                                                                                     | mar 10 | DNA Language Models                                                   |                                                                                            | j3hoque (Juthika Hoque) |
+| L17                                                                                                     | mar 12 | Genome Annotation part 1                                              |                                                                                            | dgoping                 |
+| \*Assignment 3 due Mar 15                                                                               |        |                                                                       |                                                                                            |                         |
+| L18                                                                                                     | mar 17 | Genome annotation part 2                                              |                                                                                            | dgoping                 |
+| L19                                                                                                     | mar 19 | Clustering                                                            |                                                                                            | d4hao                   |
+| L20                                                                                                     | mar 24 | RNA-Sequencing & Gene Expression                                      |                                                                                            | w27xing                 |
+| L21                                                                                                     | mar 26 | Proteomics and Mass Spectrometry                                      |                                                                                            | c234tang                |
+| L22                                                                                                     | mar 31 | RNA analysis                                                          |                                                                                            | Anna Zhelizniak         |
+| L23                                                                                                     | Apr 2  | Protein Structure Prediction Alpha fold                               |                                                                                            | a29asgha                |
+| \*Assignment 4 due Apr 4                                                                                |        |                                                                       |                                                                                            |                         |
 
