--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -93,14 +93,14 @@ This is a **tentative** class schedule and may be adjusted as the term progresse
 |                                                                                                         | feb 12 | Miterm Exam (No Lecture)                                              |                                                                                            |                         |
 | Reading Week                                                                                            | feb 17 |                                                                       |                                                                                            |                         |
 |                                                                                                         | feb 19 |                                                                       |                                                                                            |                         |
-| L12                                                                                                     | feb 24 | Genome mapping part 2                                                 |                                                                                            |                         |
-| L13                                                                                                     | feb 26 | Foundations in Machine Learning: Neural Networks                      |                                                                                            | ogamaras                |
-| \*[Assignment 2](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5911796/View) due Feb 28                                                                               |        |                                                                       |                                                                                            |                         |
-| L14                                                                                                     | mar 3  | Machine Learning in genomics                                          |                                                                                            | a7nagpal (Arnav Nagpal) |
-| L15                                                                                                     | mar 5  | Foundations in Deep Learning: Transformer Models                      |                                                                                            | mswitt                  |
-| L16                                                                                                     | mar 10 | DNA Language Models                                                   |                                                                                            | j3hoque (Juthika Hoque) |
-| L17                                                                                                     | mar 12 | Genome Annotation part 1                                              |                                                                                            | dgoping                 |
-| \*Assignment 3 due Mar 15                                                                               |        |                                                                       |                                                                                            |                         |
+| L12                                                                                                     | feb 24 | ~~Genome mapping part 2~~                                             |                                                                                            |                         |
+| L13                                                                                                     | feb 26 | ~~Foundations in Machine Learning: Neural Networks~~                  |  [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5928460/View)                                                                                          | ogamaras                |
+| \*[Assignment 2](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5911796/View) due March 3                                                                               |        |                                                                       |                                                                                            |                         |
+| L14                                                                                                     | mar 3  | ~~Machine Learning in genomics~~                                      |  [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5928461/View)                                                                                          | a7nagpal (Arnav Nagpal) |
+| L15                                                                                                     | mar 5  | ~~Foundations in Deep Learning: Transformer Models~~                  |  [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5931140/View)                                                                                          | mswitt                  |
+| L16                                                                                                     | mar 10 | ~~DNA Language Models~~                                               |  [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5935952/View)                                                                                         | j3hoque (Juthika Hoque) |
+| L17                                                                                                     | mar 12 | Genome Annotation part 1                                              |  [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5939430/View)                                                                                          | dgoping                 |
+| \*Assignment 3 due Mar 28                                                                               |        |                                                                       |                                                                                            |                         |
 | L18                                                                                                     | mar 17 | Genome annotation part 2                                              |                                                                                            | dgoping                 |
 | L19                                                                                                     | mar 19 | Clustering                                                            |                                                                                            | d4hao                   |
 | L20                                                                                                     | mar 24 | RNA-Sequencing & Gene Expression                                      |                                                                                            | w27xing                 |
