Updated Assignment Schedule

--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -100,12 +100,12 @@ This is a **tentative** class schedule and may be adjusted as the term progresse
 | L15                                                                                                     | mar 5  | ~~Foundations in Deep Learning: Transformer Models~~                  |  [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5931140/View)                                                                                          | mswitt                  |
 | L16                                                                                                     | mar 10 | ~~DNA Language Models~~                                               |  [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5935952/View)                                                                                         | j3hoque (Juthika Hoque) |
 | L17                                                                                                     | mar 12 | Genome Annotation part 1                                              |  [pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5939430/View)                                                                                          | dgoping                 |
-| \*Assignment 3 due Mar 28                                                                               |        |                                                                       |                                                                                            |                         |
+| \*[Assignment 3](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5936222/View) due Mar 28                                                                               |        |                                                                       |                                                                                            |                         |
 | L18                                                                                                     | mar 17 | Genome annotation part 2                                              |                                                                                            | dgoping                 |
 | L19                                                                                                     | mar 19 | Clustering                                                            |                                                                                            | d4hao                   |
 | L20                                                                                                     | mar 24 | RNA-Sequencing & Gene Expression                                      |                                                                                            | w27xing                 |
 | L21                                                                                                     | mar 26 | Proteomics and Mass Spectrometry                                      |                                                                                            | c234tang                |
 | L22                                                                                                     | mar 31 | RNA analysis                                                          |                                                                                            | Anna Zhelizniak         |
 | L23                                                                                                     | Apr 2  | Protein Structure Prediction Alpha fold                               |                                                                                            | a29asgha                |
-| \*Assignment 4 due Apr 4                                                                                |        |                                                                       |                                                                                            |                         |
+| \*[Assignment 4](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5936252/View) due Apr 4                                                                                |        |                                                                       |                                                                                            |                         |
 
